[package]
name = "coding-interview"
version = "0.1.0"
authors = ["Janosch Dobler <jdobler@neuroloop.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"

[build-dependencies]
cc = "*"
walkdir = "*"
